--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
         ***********************************-->
         <div class="footer">
             <div class="copyright">
-                <p>Copyright &copy;  <a href="https://themeforest.net/user/quixlab">Equilibrío: Allan Melo</a> 2023</p>
+                <p>Copyright &copy;  <a href="https://www.linkedin.com/in/allan-melo-684158b8/">Equilibrío: Allan Melo</a> 2023</p>
             </div>
         </div>
         <!--**********************************
