--- a/index.html
+++ b/index.html
@@ -193,8 +193,8 @@
                             <div class="card-body">
                                 <div class="text-center">
                                     <img src="./images/users/5.jpg" class="rounded-circle" alt="">
-                                    <h5 class="mt-3 mb-1">Allan Melo <br> Supervisor de Sistemas</h5>
-                                    <p class="m-0">Telefone: 9 98993-3796 / Ramal:9006</p>
+                                    <h5 class="mt-3 mb-1">user1 <br> Supervisor de Sistemas</h5>
+                                    <p class="m-0">Telefone: 99999999 / Ramal:0000</p>
                                 </div>
                             </div>
                         </div>
@@ -204,8 +204,8 @@
                             <div class="card-body">
                                 <div class="text-center">
                                     <img src="./images/users/5.jpg" class="rounded-circle" alt="">
-                                    <h5 class="mt-3 mb-1">Miguel <br> Auxiliar Sistema</h5>
-                                     <p class="m-0">Telefone: 9 9828-3814 / Ramal:9002</p>
+                                    <h5 class="mt-3 mb-1">user2 <br> Auxiliar Sistema</h5>
+                                    <p class="m-0">Telefone: 99999999 / Ramal:0000</p>
                                 </div>
                             </div>
                         </div>
@@ -216,8 +216,8 @@
                                 <div class="text-center">
                                      <div class="text-center">
                                         <img src="./images/users/5.jpg" class="rounded-circle" alt="">
-                                        <h5 class="mt-3 mb-1">Joedson <br>Gerente TI</h5>
-                                         <p class="m-0">Telefone: 9 9417-3997 / Ramal:225</p>
+                                        <h5 class="mt-3 mb-1">user3 <br>Gerente TI</h5>
+                                        <p class="m-0">Telefone: 99999999 / Ramal:0000</p>
                                     </div>
                                 </div>
                             </div>
@@ -229,8 +229,8 @@
                                 <div class="text-center">
                                      <div class="text-center">
                                         <img src="./images/users/5.jpg" class="rounded-circle" alt="">
-                                        <h5 class="mt-3 mb-1">Romulo Vale <br>Assistente TI</h5>
-                                         <p class="m-0">Telefone: 9 9417-3997 / Ramal:225</p>
+                                        <h5 class="mt-3 mb-1">user4 <br>Assistente TI</h5>
+                                        <p class="m-0">Telefone: 99999999 / Ramal:0000</p>
                                     </div>
                                 </div>
                             </div>
@@ -242,8 +242,8 @@
                                 <div class="text-center">
                                     <div class="text-center">
                                         <img src="./images/users/5.jpg" class="rounded-circle" alt="">
-                                        <h5 class="mt-3 mb-1">Rogério<br>Auxiliar TI</h5>
-                                         <p class="m-0">Telefone: 9 9418-3495 / Ramal:225</p>
+                                        <h5 class="mt-3 mb-1">user5<br>Auxiliar TI</h5>
+                                        <p class="m-0">Telefone: 99999999 / Ramal:0000</p>
                                     </div>
                                 </div>
                             </div>
@@ -255,8 +255,8 @@
                                 <div class="text-center">
                                     <div class="text-center">
                                         <img src="./images/users/5.jpg" class="rounded-circle" alt="">
-                                        <h5 class="mt-3 mb-1">Jhonatan Borba<br>Inventáriante - Loja</h5>
-                                         <p class="m-0">Telefone: 9 7138-6369</p>
+                                        <h5 class="mt-3 mb-1">user6  <br>Inventáriante - Loja </h5>
+                                        <p class="m-0">Telefone: 99999999 / Ramal:0000</p>
                                     </div>
                                 </div>
                             </div>
@@ -268,8 +268,8 @@
                                 <div class="text-center">
                                     <div class="text-center">
                                         <img src="./images/users/5.jpg" class="rounded-circle" alt="">
-                                        <h5 class="mt-3 mb-1">Edgar Paiva<br>Inventáriante - Loja</h5>
-                                        <p class="m-0">Telefone: 9 8984-9551</p>
+                                        <h5 class="mt-3 mb-1">user7  <br>Inventáriante - Loja </h5>
+                                        <p class="m-0">Telefone: 99999999 / Ramal:0000</p>
                                     </div>
                                 </div>
                             </div>
@@ -281,8 +281,8 @@
                                 <div class="text-center">
                                     <div class="text-center">
                                         <img src="./images/users/5.jpg" class="rounded-circle" alt="">
-                                        <h5 class="mt-3 mb-1">Jonathan Alves <br>Inventáriante - CD </h5>
-                                        <p class="m-0">Telefone: 9 99596-3895 / Ramal:1002</p>
+                                        <h5 class="mt-3 mb-1">user8  <br>Inventáriante - CD </h5>
+                                        <p class="m-0">Telefone: 99999999 / Ramal:0000</p>
                                     </div>
                                 </div>
                             </div>
