--- a/Wms/Recebimento.html
+++ b/Wms/Recebimento.html
@@ -386,7 +386,7 @@
                                                 </p> 
                                                 <h3>Finalização do Pedido</h3>
                                                 <p>Após ter realizado todos os procedimentos de contagem, clicar em validar contagem e enviar a impressão
-                                                do pedido impresso para o setor resposável para fazer as tratativas seguintes. Atualmente realizado por <strong> Vitoria e Tatiana-CD Ramal: 9001</strong>
+                                                do pedido impresso para o setor resposável para fazer as tratativas seguintes. Atualmente realizado por <strong> user1 e user2-CD Ramal: 0000</strong>
                                                 </p>
                                             </div>
                                         </div>
