--- a/Wms/RecebimentoRequisição.html
+++ b/Wms/RecebimentoRequisição.html
@@ -356,7 +356,7 @@
                                         <p>Após receber corretamente o seu material, clicar em validar. Com isso sai a impressão termica do material que acabou de receber para conferencia.</p>
                                         <h3> 6º Divergência no Pedido</h3>
                                         <p>Se o produto for cortado no CD, correto é estar descriminado no papel de envio que é recebido junto do pedido. Estando é necessário apenas entrar em contato com 
-                                        a Equipe de Envios. <strong>Miguel - Ramal: 9004 ou Allan - Ramal: 9006.</strong> <br>
+                                        a Equipe de Envios. <strong>user1  - Ramal: 0000 ou Allan - Ramal: 0000.</strong> <br>
                                         Se a falta não foi notificada no papel do pedido, necessário entrar em contato com a equipe de Envios, antes do seu tempo maximo de requisição. Para ter tempo de 
                                         procurar a falta.
                                         Encontrando o motido da falta, apenas a equipe de envio de pedidos tem a permissão de cortar material do pedido.
